tests/core/snapshots/graphql-datasource-with-recurssive-input.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": {
        "name": "A",
        "shortName": "B"
      }
    }
  }
}
