tests/core/snapshots/graphql-datasource-with-recurssive-input.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Post {
  name: String!
  shortName: String
}

input PostFilter {
  name: StringHashFilter
  rec: PostFilter
}

type Query {
  posts(filter: PostFilter): Post
}

input StringHashFilter {
  eq: String
  in: [String]
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
