tests/core/snapshots/graphql-datasource-with-recurssive-input.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

input PostFilter {
  name: StringHashFilter
  rec: PostFilter
}

input StringHashFilter {
  eq: String
  in: [String]
}

type Post {
  name: String!
  shortName: String
}

type Query {
  posts(filter: PostFilter): Post @expr(body: {name: "A", shortName: "B"})
}
